improve the text

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -61,9 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "y = np.array([[8.],\n",
-    "              [-11.],\n",
-    "              [-3.]])"
+    "y = np.array([8., -11., -3.])"
    ]
   },
   {
@@ -95,9 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -199,9 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-11.]\n",
-      " [  8.]\n",
-      " [ -3.]]\n"
+      "[-11.   8.  -3.]\n"
      ]
     }
    ],
@@ -298,9 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[-11.        ],\n",
-       "       [  0.66666667],\n",
-       "       [  4.33333333]])"
+       "array([-11.        ,   0.66666667,   4.33333333])"
       ]
      },
      "execution_count": 15,
@@ -381,9 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-11.        ]\n",
-      " [  4.33333333]\n",
-      " [  0.66666667]]\n"
+      "[-11.           4.33333333   0.66666667]\n"
      ]
     }
    ],
@@ -473,9 +463,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[-11.        ],\n",
-       "       [  4.33333333],\n",
-       "       [ -0.2       ]])"
+       "array([-11.        ,   4.33333333,  -0.2       ])"
       ]
      },
      "execution_count": 24,
@@ -505,9 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -535,14 +521,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
    "source": [
     "print np.linalg.solve(A,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algorithm implementation"
    ]
   },
   {
@@ -604,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For convenience, let's define $\\tilde{\\mathbf{C}}^{(k-1)} = \\mathbf{P}^{(k)} \\mathbf{C}^{(k-1)}$. Then, the computation of  $\\tilde{\\mathbf{C}}^{(k-1)}$ can be rewritten as follows:"
+    "For convenience, let's define $\\tilde{\\mathbf{C}}^{(k-1)} = \\mathbf{P}^{(k)} \\mathbf{C}^{(k-1)}$. Then, the computation of  $\\mathbf{C}^{(k)}$ can be rewritten as follows:"
    ]
   },
   {
@@ -626,7 +617,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that $\\mathbf{t}^{(k)} \\left[ \\, : k\\right] = 0$. Then, we may simplify the computations as follows:"
+    "We know that the subtraction of the outer product $\\mathbf{t}^{(k)} \\otimes \\tilde{\\mathbf{C}}^{(k-1)}\\left[ \\, k \\, , \\, : \\, \\right]$ from the matrix $\\mathbf{C}^{(k-1)}$ produces $\\mathbf{C}^{(k)}\\left[ \\, i+1 \\, , \\, i \\, \\right] = 0$. Besides, \n",
+    "notice that $\\mathbf{t}^{(k)} \\left[ \\, : k\\right] = 0$. Consequently, the outer product affects only the elements $\\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right]$ of the matrix $\\mathbf{C}^{(k)}$. Then, we may simplify the computations as follows:"
    ]
   },
   {
@@ -743,11 +735,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement the Gaussian elimination with partial pivoting to calculate the equivalent triangular system. The code must use the outer product function that was previously implemented. The code must receive the matrix `A` and the vector `y` and return the matrix `B` and the vector `z`. The Gauss multipliers must be stored below the diagonal of `B`.\n",
+    "1. Implement the Gaussian elimination with partial pivoting to calculate the equivalent triangular system. The code must use the outer product function that was implemented in a previous class. The code must receive the matrix `A` and the vector `y` and return the matrix `B` and the vector `z`. The Gauss multipliers must be stored below the diagonal of `B`.\n",
     "\n",
-    "2. Use your previous function for solving the equivalent (upper) triangular system `Bx = z`.\n",
+    "2. Use the function implemented in a previous class for solving the equivalent (upper) triangular system `Bx = z`.\n",
     "\n",
     "3. Use the `code-template.ipynb` to test your code against `np.dot(A,y)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inverse matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Sometimes, we need to calculate the inverse of a matrix. The inverse of a $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies the following property:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{A}^{-1} \\mathbf{A} &= \\mathbf{I} \\\\\n",
+    "\\mathbf{A} \\mathbf{A}^{-1} &= \\mathbf{I} \n",
+    "\\end{split} \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{I}$ representes the identity matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second equation presented above can be conveniently rewritten by using a column partition given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} \n",
+    "\\left[ \\mathbf{A}^{-1}\\left[ \\, : \\, , \\, 1  \\right] \\cdots \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, N  \\right]  \\right] = \n",
+    "\\left[ \\mathbf{u}_{1} \\cdots \\mathbf{u}_{N} \\right] \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent, respectively, the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$. This equation can then be separated into $N$ linear systems:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, 1 \\right] &= \\mathbf{u}_{1} \\\\\n",
+    "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, 2 \\right] &= \\mathbf{u}_{2} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\mathbf{A} \\, \\mathbf{A}^{-1} \\left[ \\, : \\, , \\, N \\right] &= \\mathbf{u}_{N}\n",
+    "\\end{split} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This equation shows that each column of the inverse matrix $\\mathbf{A}^{-1}$ can be calculated by solving a linear system."
    ]
   },
   {
@@ -761,19 +834,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Use your functions for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse column by column.\n",
+    "1. Use your Gauss elimination code for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse column by column.\n",
     "\n",
     "2. Use the `code-template.ipynb` to test your code against `np.inv(A)`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
