insert a figure about LU decomposition

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -595,6 +595,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that a matrix $\\mathbf{P}^{(k)}$ may interchange the set of rows $\\left[ \\, k \\, , \\, : \\, \\right]$. For example, the matrix $\\mathbf{P}^{(1)}$ may interchange all the lines forming the matrix $\\mathbf{C}^{(0)}$; the matrix $\\mathbf{P}^{(2)}$ may interchange all the lines forming the matrix $\\mathbf{C}^{(0)}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For convenience, let's define $\\tilde{\\mathbf{C}}^{(k-1)} = \\mathbf{P}^{(k)} \\mathbf{C}^{(k-1)}$. Then, the computation of  $\\mathbf{C}^{(k)}$ can be rewritten as follows:"
    ]
   },
