correct small errors

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -595,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that a matrix $\\mathbf{P}^{(k)}$ may interchange the set of rows $\\left[ \\, k \\, , \\, : \\, \\right]$. For example, the matrix $\\mathbf{P}^{(1)}$ may interchange all the lines forming the matrix $\\mathbf{C}^{(0)}$; the matrix $\\mathbf{P}^{(2)}$ may interchange all the lines forming the matrix $\\mathbf{C}^{(0)}$ "
+    "Notice that a matrix $\\mathbf{P}^{(k)}$ may interchange the set of rows $\\left[ \\, k \\, , \\, : \\, \\right]$. For example, while the matrix $\\mathbf{P}^{(1)}$ can interchange all the rows forming the matrix $\\mathbf{C}^{(0)}$, the matrix $\\mathbf{P}^{(2)}$ can interchange only the set of rows $\\left[ \\, 2 \\, , \\, : \\, \\right]$ (from the second on) forming the matrix $\\mathbf{C}^{(1)}$ ."
    ]
   },
   {
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{I}$ representes the identity matrix."
+    "where $\\mathbf{I}$ represents the identity matrix."
    ]
   },
   {
@@ -806,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent, respectively, the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$. This equation can then be separated into $N$ linear systems:"
+    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$, respectively. This equation can then be separated into $N$ linear systems:"
    ]
   },
   {
@@ -841,10 +841,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Use your Gauss elimination code for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse column by column.\n",
+    "1. Use your Gauss elimination code for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse, column by column.\n",
     "\n",
     "2. Use the `code-template.ipynb` to test your code against `np.inv(A)`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
