include links to the notebooks in the nbviewer and correct small errors

--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where the symbols \"$\\times$\" denote non-null elements. Notice that the original matrix $\\mathbf{A}$ is transformed into a matrix $\\mathbf{A}^{(1)}$ having null-elements below the main diagonal in its first column. This zeroing procedure can be described, in matrix notation, as follows:"
+    "where the symbols \"$\\times$\" denote non-null elements. Notice that the original matrix $\\mathbf{A}$ is transformed into a matrix $\\mathbf{A}^{(1)}$ having null-elements below the main diagonal in its first column. This zeroing procedure can be described as follows:"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This zeroing procedure can be described, in matrix notation, as follows:"
+    "This zeroing procedure can be described is given by:"
    ]
   },
   {
@@ -393,7 +393,7 @@
    "source": [
     "Now, stop. Take a deep breath. Wait 10 seconds...\n",
     "\n",
-    "The proccess of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an outer product!"
+    "The proccess of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an iterative outer product update!"
    ]
   },
   {
