lu decomposition without pivoting

--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -4,101 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LU decomposition - introduction"
+    "# LU decomposition - pivoting"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [LU decomposition](https://en.wikipedia.org/wiki/LU_decomposition) was introduced by no other than [Alan Turing](https://en.wikipedia.org/wiki/Alan_Turing), in his paper [Rounding-off errors in matrix processes, Q. J. Mechanics Appl. Math. (1948) 1 (1): 287-308. doi: 10.1093/qjmam/1.1.287](http://dx.doi.org/10.1093/qjmam/1.1.287). The LU decomposition is a factorization process that describes a matrix $\\mathbf{A}$ as a product of a unit triangular matrix $\\mathbf{L}$ (i.e., all the entries of its main diagonal are equal to one) and an upper triangular matrix $\\mathbf{U}$. In his paper, Turing showed, among other things, how the Gaussian elimination enshrines the LU decompositon."
+    "The previous notebook presents an algorithm for computing the [LU decomposition](https://en.wikipedia.org/wiki/LU_decomposition). The algotithm, however, does not apply any pivoting scheme for preventing spurious errors due to numerical instabilities. This notebook shows how the partial pivoting changes our previous algorithm for computing the LU decomposition."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first recall the $3 \\times 3$ linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ presented in our last classes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.linalg import lu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A = np.array([[2.,1.,-1.],\n",
-    "              [-3.,-1.,2.],\n",
-    "              [-2.,1.,2.]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y = np.array([8., -11., -3.])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The solution of this system is given by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.linalg.solve(A,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.  3. -1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Consider the solution of this linear system by using the Gaussian elimination without pivoting."
+    "Let's recall the solution of a linear system by using the Gaussian elimination with partial pivoting:"
    ]
   },
   {
@@ -108,18 +28,39 @@
     "$$\n",
     "\\begin{array}{ccccc}\n",
     "\\mathbf{A}^{(0)} = \\mathbf{A} & & & \\mathbf{y}^{(0)} = \\mathbf{y} \\\\\\\\\n",
-    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{A}^{(0)} & & &\n",
-    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{y}^{(0)} \\\\\\\\\n",
-    "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{A}^{(1)} & & &\n",
-    "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{y}^{(1)}\n",
-    "\\end{array} \\: ,$$"
+    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{A}^{(0)} & & &\n",
+    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{y}^{(0)} \\\\\\\\\n",
+    "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{A}^{(1)} & & &\n",
+    "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{y}^{(1)}\n",
+    "\\end{array} \\: ,\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{M}^{(k)}$ is a matrix given by"
+    "where $\\mathbf{P}^{(k)}$ is the permutation matrix used to interchange the rows and perform the partial pivoting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-29da87566340>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-29da87566340>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    PAREI AQUI\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "PAREI AQUI"
    ]
   },
   {
