--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -496,6 +496,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Existence of the LU decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The LU decomposition may not exist. Based on our previous classes, it is relatively easy to notice that the existence of the LU decomposition requires all the pivots be nonzero. However, there is a formal definition of the conditions under which the LU decomposition exists (Golub and Van Loan, 2013):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THEOREM: If $\\mathbf{A} \\in \\mathbb{R}^{N \\times N}$ and $\\text{det} \\left( \\mathbf{A} \\left[1:k \\, , 1:k \\right] \\right) \\ne 0$ for $k = 1 : N-1$, then there exists a lower triangular matrix $\\mathbf{L} \\in \\mathbb{R}^{N \\times N}$ and an upper triangular matrix $\\mathbf{U} \\in \\mathbb{R}^{N \\times N}$ such that $\\mathbf{A} = \\mathbf{L} \\mathbf{U}$. If this is the case and $\\mathbf{A}$ is nonsingular, then the factorization is unique and $\\text{det} \\left( \\mathbf{A} \\right) = u_{11} \\cdots u_{NN}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
