correct ldlt algorithm with nested for implement cholesky decomposition

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -50,23 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.  0.  0.  0.]\n",
-      "[ 1.28583394  1.50651059  1.12025257]\n",
-      "[ 1.03582655  0.87974366]\n",
-      "[ 1.33401399]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for j in range(N):\n",
     "    \n",
@@ -76,14 +64,12 @@
     "        \n",
     "    d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
     "    \n",
-    "    L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]\n",
-    "    \n",
-    "    print np.dot(L[j+1:,:j],v[:j])"
+    "    L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +91,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -145,15 +131,15 @@
     "        d1[j] -= v1[i]*L1[j,i]\n",
     "    \n",
     "    for i in range(j+1,N):\n",
-    "        L1[i,j] = A[i,j] - np.dot(L1[i,:j],v1[:j])\n",
-    "        #for k in range(j):\n",
-    "        #    L1[i,j] -= v1[k]*L1[i,k]\n",
-    "        L1[i,j] = L[i,j]/d1[j]"
+    "        L1[i,j] = A[i,j]\n",
+    "        for k in range(j):\n",
+    "            L1[i,j] -= v1[k]*L1[i,k]\n",
+    "        L1[i,j] = L1[i,j]/d1[j]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -172,10 +158,10 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -194,25 +180,21 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.        ,  0.        ,  0.        ,  0.        ,  0.        ],\n",
-       "       [ 1.71458863,  1.        ,  0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.8412663 ,  0.46013694,  1.        ,  0.        ,  0.        ],\n",
-       "       [ 0.98564562,  0.83565593,  0.13315588,  1.        ,  0.        ],\n",
-       "       [ 0.73293348,  0.92984122,  0.99748548,  0.04342415,  1.        ]])"
+       "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L"
+    "np.allclose(L, L1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -220,26 +202,17 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.89143863,  0.77149984,  0.68175157,  0.8141073 ,  0.09191125])"
+       "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d"
+    "np.allclose(d, d1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
