test the cholesky and ldlt codes continue the notebook of LU decomposition with pivoting

--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{Q}^{-1} = \\left( \\mathbf{Q}^{(1)} \\right) ^{-1} \\, \\left( \\mathbf{Q}^{(2)} \\right) ^{-1}$. We know that $\\mathbf{A}^{(2)}$ is an upper triangular matrix. However, what about the matrix $\\mathbf{Q}^{-1}$? To answer this question, let's define a generic $\\left( \\mathbf{Q}^{(k)} \\right) ^{-1}$. It can be shown that "
+    "where $\\mathbf{Q}^{-1} = \\mathbf{Q}^{(-1)} \\, \\mathbf{Q}^{(-2)}$. We know that $\\mathbf{A}^{(2)}$ is an upper triangular matrix. However, what about the matrix $\\mathbf{Q}^{-1}$? To answer this question, let's define a generic $\\mathbf{Q}^{(-k)}$. It can be shown that "
    ]
   },
   {
@@ -293,7 +293,7 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\left( \\mathbf{Q}^{(k)} \\right) ^{-1} &=\n",
+    "\\mathbf{Q}^{(-k)} &=\n",
     "\\mathbf{I} + \\mathbf{M}^{(k)} \\\\\n",
     "&= \\mathbf{I} + \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
     "\\end{split} \\: .\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can verify this equation by showing that the product $\\mathbf{Q}^{(k)} \\left( \\mathbf{Q}^{(k)}\\right)^{-1}$ equals to the identity, as follows:"
+    "We can verify this equation by showing that the product $\\mathbf{Q}^{(k)} \\mathbf{Q}^{(-k)}$ equals to the identity, as follows:"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{Q}^{(k)} \\left( \\mathbf{Q}^{(k)}\\right)^{-1}\n",
+    "\\mathbf{Q}^{(k)} \\mathbf{Q}^{(-k)}\n",
     "&= \\left[ \\mathbf{I} - \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\,\n",
     "\\left[ \\mathbf{I} + \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\right] \\\\\n",
     "&= \\mathbf{I} - \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
