--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -44,128 +44,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-29da87566340>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-29da87566340>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    PAREI AQUI\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "PAREI AQUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\otimes (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mathbf{u}^{(k)}$ is a $3 \\times 1$ vector with all elements equal to $0$, except the $k$th element, which is equal to $1$, and $\\mathbf{t}^{(k)}$ is a $3 \\times 1$ vector whose $i$th element $t_{i}^{(k)}$ is given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i \\le k \\\\\\\\ \\dfrac{a^{(k-1)}_{ik}}{a^{(k-1)}_{kk}} & \\quad \\text{if } i \\gt k\\\\ \\end{cases} \\: ,$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where $a^{(k-1)}_{ij}$ is the $ij$ element of the matrix $\\mathbf{A}^{(k-1)}$."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "At the end of this algorithm, the original matrix $\\mathbf{A}$ is transformed into an upper triangular matrix $\\mathbf{A}^{(2)}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's analyze the matrices $\\mathbf{M}^{(1)}$ and $\\mathbf{M}^{(2)}$. They are given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$$\n",
-    "\\begin{split}\n",
-    "\\mathbf{M}^{(1)} &= \\mathbf{t}^{(1)} \\otimes (\\mathbf{u}^{(1)})^{\\top}  \\\\\n",
-    "&= \\left[ \n",
-    "\\begin{array}{c}\n",
-    "0 \\\\\n",
-    "t_{2}^{(1)} \\\\\n",
-    "t_{3}^{(1)}\n",
-    "\\end{array} \\right] \\otimes \n",
-    "\\left[ \\begin{array}{ccc}\n",
-    "1 & 0 & 0\n",
-    "\\end{array} \\right] \\\\\n",
-    "&= \\left[ \\begin{array}{ccc}\n",
-    "0 & 0 & 0 \\\\\n",
-    "t_{2}^{(1)} & 0 & 0 \\\\\n",
-    "t_{3}^{(1)} & 0 & 0\n",
-    "\\end{array} \\right]\n",
-    "\\end{split}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "and, similarly, "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "$$\n",
-    "\\begin{split}\n",
-    "\\mathbf{M}^{(2)} &= \\mathbf{t}^{(2)} \\otimes (\\mathbf{u}^{(2)})^{\\top}  \\\\\n",
-    "&= \\left[ \n",
-    "\\begin{array}{c}\n",
-    "0 \\\\\n",
-    "0 \\\\\n",
-    "t_{3}^{(2)}\n",
-    "\\end{array} \\right] \\otimes \n",
-    "\\left[ \\begin{array}{ccc}\n",
-    "0 & 1 & 0\n",
-    "\\end{array} \\right] \\\\\n",
-    "&= \\left[ \\begin{array}{ccc}\n",
-    "0 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 \\\\\n",
-    "0 & t_{3}^{(2)} & 0\n",
-    "\\end{array} \\right]\n",
-    "\\end{split} \\: .\n",
-    "$$"
    ]
   },
   {
@@ -182,26 +64,19 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{A}^{(2)} = \\mathbf{Q} \\, \\mathbf{A} \\: ,\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "were $\\mathbf{Q} = \\mathbf{Q}^{(2)} \\, \\mathbf{Q}^{(1)}$ is the product of the Gauss transformations, which are given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{Q}^{(1)} &= \\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\\\\n",
-    "\\mathbf{Q}^{(2)} &= \\left( \\mathbf{I} - \\mathbf{M}^{(2)} \\right)\n",
-    "\\end{split} \\: .\n",
+    "\\mathbf{A}^{(2)} \n",
+    "&= \n",
+    "\\left( \\mathbf{I} - \\mathbf{M}^{(2)} \\right) \\mathbf{P}^{(2)} \\,\n",
+    "\\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\mathbf{P}^{(1)} \\,\n",
+    "\\mathbf{A} \\\\\n",
+    "&=\n",
+    "\\underbrace{\\left( \\mathbf{I} - \\mathbf{M}^{(2)} \\right)}_{\\mathbf{Q}^{(2)}} \\,\n",
+    "\\underbrace{\\mathbf{P}^{(2)} \\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\mathbf{P}^{(-2)}}_{\\mathbf{Q}^{(1)}} \\,\n",
+    "\\mathbf{P}^{(2)} \\mathbf{P}^{(1)} \\,\n",
+    "\\mathbf{A} \\\\\n",
+    "&= \\mathbf{Q} \\mathbf{P} \\mathbf{A}\n",
+    "\\end{split}\n",
     "$$"
    ]
   },
@@ -209,7 +84,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, the original matrix $\\mathbf{A}$ can be written as follows:"
+    "wHere $\\mathbf{P}^{(-k)} \\equiv \\left( \\mathbf{P}^{(k)} \\right)^{-1}$, $\\mathbf{P} = \\mathbf{P}^{(2)} \\, \\mathbf{P}^{(1)}$ and $\\mathbf{Q} = \\mathbf{Q}^{(2)} \\, \\mathbf{Q}^{(1)}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The permuted matrix $\\mathbf{P}\\mathbf{A}$ can be written as follows:"
    ]
   },
   {
@@ -217,7 +99,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{A} = \\mathbf{Q}^{-1} \\, \\mathbf{A}^{(2)} \\: ,\n",
+    "\\mathbf{P}\\mathbf{A} = \\mathbf{Q}^{-1} \\, \\mathbf{A}^{(2)} \\: ,\n",
     "$$"
    ]
   },
@@ -225,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{Q}^{-1} = \\left( \\mathbf{Q}^{(1)} \\right) ^{-1} \\, \\left( \\mathbf{Q}^{(2)} \\right) ^{-1}$. We know that $\\mathbf{A}^{(2)}$ is an upper triangular matrix. However, what about the matrix $\\mathbf{Q}^{-1}$? To answer this question, let's define a generic $\\left( \\mathbf{Q}^{(k)} \\right) ^{-1}$. It can be shown that "
+    "where $\\mathbf{Q}^{-1} = \\mathbf{Q}^{(-1)} \\, \\mathbf{Q}^{(-2)}$, $\\mathbf{Q}^{(-k)} \\equiv \\left( \\mathbf{Q}^{(k)} \\right)^{-1}$. As in the previous class, we need to know how to define a generic $\\mathbf{Q}^{(-k)}$. Let's first define a generic $\\mathbf{Q}^{(k)}$ as follows:"
    ]
   },
   {
@@ -233,12 +115,48 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{split}\n",
-    "\\left( \\mathbf{Q}^{(k)} \\right) ^{-1} &=\n",
-    "\\mathbf{I} + \\mathbf{M}^{(k)} \\\\\n",
-    "&= \\mathbf{I} + \\mathbf{t}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top}\n",
-    "\\end{split} \\: .\n",
+    "\\mathbf{Q}^{(k)} = \\mathbf{P}^{(N-1)} \\cdots \\mathbf{P}^{(k+2)}\\mathbf{P}^{(k+1)} \\,\n",
+    "\\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\,\n",
+    "\\mathbf{P}^{-(k+1)}\\mathbf{P}^{-(k+2)} \\cdots \\mathbf{P}^{-(N-1)} \\: .\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, a generic $\\mathbf{Q}^{(-k)}$ is given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{Q}^{(-k)} = \\mathbf{P}^{-(N-1)} \\cdots \\mathbf{P}^{-(k+2)}\\mathbf{P}^{-(k+1)} \\,\n",
+    "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
+    "\\mathbf{P}^{(k+1)}\\mathbf{P}^{(k+2)} \\cdots \\mathbf{P}^{(N-1)} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-29da87566340>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-29da87566340>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    PAREI AQUI\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "PAREI AQUI"
    ]
   },
   {
