--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -41,11 +41,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.21883681  1.12427711  0.84556036  0.91567967  1.26498952]\n",
+      " [ 1.12427711  1.37911447  1.16736836  0.77475554  0.92861631]\n",
+      " [ 0.84556036  1.16736836  1.15172195  0.53171608  0.69847219]\n",
+      " [ 0.91567967  0.77475554  0.53171608  0.85274456  1.06439242]\n",
+      " [ 1.26498952  0.92861631  0.69847219  1.06439242  1.72352733]]\n"
+     ]
+    }
+   ],
    "source": [
-    "v = np.zeros(N)\n",
-    "d = np.zeros(N)\n",
-    "L = np.identity(N)"
+    "print A"
    ]
   },
   {
@@ -56,13 +66,9 @@
    },
    "outputs": [],
    "source": [
-    "for j in range(N):\n",
-    "\n",
-    "    v[:j] = L[j,:j]*d[:j]\n",
-    "        \n",
-    "    d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
-    "    \n",
-    "    L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
+    "#v = np.zeros(N)\n",
+    "d = np.zeros(N)\n",
+    "L = np.identity(N)"
    ]
   },
   {
@@ -73,12 +79,29 @@
    },
    "outputs": [],
    "source": [
-    "A_calc = np.dot(L, np.dot(np.diag(d), L.T))"
+    "for j in range(N):\n",
+    "\n",
+    "    v = L[j,:j]*d[:j]\n",
+    "        \n",
+    "    d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
+    "    \n",
+    "    L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A_calc = np.dot(L, np.dot(np.diag(d), L.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -137,35 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "A_calc = np.dot(L1, np.dot(np.diag(d1), L1.T))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(A, A_calc)"
    ]
   },
   {
@@ -187,7 +188,7 @@
     }
    ],
    "source": [
-    "np.allclose(L, L1)"
+    "np.allclose(A, A_calc)"
    ]
   },
   {
@@ -209,8 +210,135 @@
     }
    ],
    "source": [
+    "np.allclose(L, L1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "np.allclose(d, d1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = np.random.rand(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = np.linalg.solve(A,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 21.51393868 -28.16059541  16.97716206   9.84692573 -13.54234636]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w = np.linalg.solve(L,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = np.linalg.solve(np.diag(d),w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_calc = np.linalg.solve(L.T, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(x, x_calc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
