notebooks of the LU decomposition

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -696,7 +696,7 @@
     "    for i = 1:N-1\n",
     "        \n",
     "        # permutation step (computation of C tilde)\n",
-    "        p, C = np.permut(C, i)\n",
+    "        p, C = permut(C, i)\n",
     "        D = D[p]\n",
     "        \n",
     "        # assert the pivot is nonzero\n",
