--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -519,6 +519,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Exercise 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Implement the LU decomposition presented above. The code must receive a matrix `A` and calculate the matrices `L` and `U`.\n",
+    "\n",
+    "2. Use the calculated matrices `L` and `U` for solving a linear system `Ax = y`. The code must use the functions you have created for solving lower and upper triangular systems.\n",
+    "\n",
+    "3. Use the `numpy.allclose` to compare (a) the original matrix `A` to the product `LU` and (b) the solution of the linear system  obtained by your LU code to the solution obtained by `numpy.solve(A,y)`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
