least squares notebook

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook tries to illustrate a simple method for estimating the horizontal coordinates of an epicenter."
+    "This notebook illustrates a simple method for estimating the horizontal coordinates of an epicenter."
    ]
   },
   {
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Implement the Gauss-Newton, Steepes Decent and Levenberg-Marquardt methods for estimating the coordinates of the epicenter from the simulated time differences `d`. The algorithm must use the functions you have implemented in the previous classes and also the auxiliary functions described in the notebook `gauss_newton.ipynb`. For each algorithm, the value of the goal function at each iteration must be stored in a list `phi_list` and the x and y coordinates estimated at each iteration must be stored in two lists `x0` and `y0`, respectively. At the end of each one of these three algorithms, plot (i) the estimated epicenter at each iteration, (ii) the value of the goal function at each iteration and (iii) the comparison between the observed data `d` and the data preduced by the estimated epicenter (predicted data). These three plots can be created by executing the code below:"
+    "2) Implement the Gauss-Newton, Steepest Decent and Levenberg-Marquardt methods for estimating the coordinates of the epicenter from the simulated time differences `d`. The algorithm must use the functions you have implemented in the previous classes and also the auxiliary functions described in the notebooks `gauss_newton.ipynb`, `steepest_decent.ipynb` and `leven_marq.ipynb`. For each algorithm, the value of the goal function at each iteration must be stored in a list `phi_list` and the estimated coordinates x and y at each iteration must be stored in two lists `x0` and `y0`, respectively. At the end of each one of these three algorithms, plot (i) the estimated epicenter at each iteration, (ii) the value of the goal function at each iteration and (iii) the comparison between the observed data `d` and the data produced by the estimated epicenter (predicted data). These three plots can be created by executing the code below:"
    ]
   },
   {
@@ -647,6 +647,7 @@
     "    plt.ylim(-5.,phi_list[0]+5.)\n",
     "    plt.show()\n",
     "    \n",
+    "    # plot the observed and predicted data\n",
     "    plt.figure(figsize=(8,3))\n",
     "    stations_label = ['A', 'B', 'C']\n",
     "    stations = [1,2,3]\n",
@@ -665,71 +666,6 @@
     "               loc=4, ncol=2, borderaxespad=0.,\n",
     "               fontsize=14)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2) Create a function that receives the observed data vector `d` and the predicted data vector `dt` and return the value of the goal function. This function must look like:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    def phi_val(dobs,dpre):\n",
-    "        '''\n",
-    "        Brief description of this function\n",
-    "        text text text ...\n",
-    "\n",
-    "        input\n",
-    "        text text text ...\n",
-    "\n",
-    "        output\n",
-    "        text text text ...\n",
-    "        '''\n",
-    "        \n",
-    "        assert (dobs.size == dpre.size), 'observed and predicted data vectors \\\n",
-    "            must have the same number of elements'\n",
-    "\n",
-    "        r = dobs - dpre\n",
-    "        return np.sum(r*r)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3) Create a function for evaluating whether the following convergence criterion is True:\n",
-    "\n",
-    "$$\n",
-    "\\left| \\frac{phi0 - phi1}{phi0} \\right| \\le \\beta \\: ,\n",
-    "$$\n",
-    "\n",
-    "where $\\beta$ is a small positive number. This function must look like:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    def convergence(phi0,phi,beta):\n",
-    "        '''\n",
-    "        Brief description of this function\n",
-    "        text text text ...\n",
-    "\n",
-    "        input\n",
-    "        text text text ...\n",
-    "\n",
-    "        output\n",
-    "        text text text ...\n",
-    "        '''\n",
-    "        \n",
-    "        assert (phi0 >= 0.) and (phi1 >= 0.), 'the goal function cannot assume negative values'\n",
-    "        \n",
-    "        rel_val = abs((phi0-phi)/phi0) \n",
-    "        return rel_val < beta"
    ]
   }
  ],
